fix: iter 4 accessibility issue on login + add favicon and fix some styling on mobile

--- a/src/web_app/src/css/components/_login.scss
+++ b/src/web_app/src/css/components/_login.scss
@@ -51,9 +51,12 @@
             }
 
             &__form-transition-header {
-                border: $border_thickness solid $white;
+                border: $border_thickness solid $black;
                 display: inline-block;
                 padding: $padding_border_block;
+                background-color: $white;
+                color: $black;
+                opacity: .9;
             }
 
             &__login-header {
